	  task status information.  A consequence of this is that you cannot use
	  the 'ps' command if the procfs is not enabled and mounted at
	  /proc (2015-11-28).

7.14 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* netutils/telnetd:  Move the Telnet driver from netutils/telnetd to
	  nuttx/drivers/net.  It is a driver an belongs in the OS.  There are
	  still some partitioning issues with the interface to the Telnet
	  driver (2015-12-07).
	* netutils/telnetd:  No longer calls OS interfade telnet_driver.  Now
	  creates Telnet sessions by open a new factory device at /dev/telnet
	  and then using ioctl calls to create the session character drivers
	  at /dev/telnetN (2015-12-07).
	* netutils/ping: Unfinished implementation of ping/ping6 using raw
	  sockets (2015-12-11).
	* examples/module:  Add a test harness for verifying NuttX kernel
	  modules (2015-12-12).
	* apps/nshlib:  Add module commands: insmod, rmmod, and lsmod
	  (2015-12-13).
	* apps/examples/pca9635:  Add a simple test of PCA9635PW PWM LED
	  driver.  From Alan Carvalho de Assis (2015-12-15).
	* apps/examples/ostest:  Add a test of POSIX timers using
	  SIGEV_THREAD (20156-12-30).
	* apps/nshlib:  Add a 'time' command that may be used to time the
	  execution of other commands (2015-12-31).
	* apps/netutils/netlib:  Add netlib_get_dripv4addr() and
	  netlib_get_ipv4netmask().  From Pelle Windestam (2016-01-14).
	* apps/fsutils/passwd: Utility library for accessing a password
	  file like /etc/passwd (2016-01-19).
	* apps/nshlib/nsh_passwdcmds.c:  Add useradd, userdel, and passwd
	  commands (2019-01-20).
	* apps/nshlib:  Now supports a Message of the Day (MOTD) that will
	  be presented after the NSH greeting (2015-01-20).
	* apps/nshlib:  All sessions may be protected with logins using
	  the encrypted password in /etc/passwd (2016-01-20).
	* apps/fsutils/inifile:  Move system/inifile to fsutils/inifile
	  where it seems to fit in better (2016-01-20).
