@@ -43,6 +43,11 @@ config NSH_PLATFORM_MOTD
 
 		One newline will be inserted after the platform-supplied message.
 
+		platform_motd() is prototyped and described in apps/include/nsh.h
+		which may be included like:
+
+			#include <apps/nsh.h>
+
 config NSH_MOTD_STRING
 	string "MOTD String"
 	default "No MOTD string provided"
@@ -379,7 +384,7 @@ config NSH_DISABLE_NSLOOKUP
 config NSH_DISABLE_PASSWD
 	bool "Disable passwd"
 	default y
-	depends on FSUTILS_PASSWD && FS_WRITABLE && !FSUTILS_PASSWD_READONLY
+	depends on NSH_LOGIN_PASSWD && FS_WRITABLE && !FSUTILS_PASSWD_READONLY
 
 config NSH_DISABLE_POWEROFF
 	bool "Disable poweroff"
@@ -475,12 +480,12 @@ config NSH_DISABLE_URLENCODE
 config NSH_DISABLE_USERADD
 	bool "Disable useradd"
 	default y
-	depends on FSUTILS_PASSWD && FS_WRITABLE && !FSUTILS_PASSWD_READONLY
+	depends on NSH_LOGIN_PASSWD && FS_WRITABLE && !FSUTILS_PASSWD_READONLY
 
 config NSH_DISABLE_USERDEL
 	bool "Disable userdel"
 	default y
-	depends on FSUTILS_PASSWD && FS_WRITABLE && !FSUTILS_PASSWD_READONLY
+	depends on NSH_LOGIN_PASSWD && FS_WRITABLE && !FSUTILS_PASSWD_READONLY
 
 config NSH_DISABLE_USLEEP
 	bool "Disable usleep"
@@ -1468,22 +1473,70 @@ config NSH_TELNET_LOGIN
 
 if NSH_LOGIN
 
+choice
+	prompt "Verification method"
+	default NSH_LOGIN_PASSWD if FSUTILS_PASSWD
+	default NSH_LOGIN_FIXED if !FSUTILS_PASSWD
+
+config NSH_LOGIN_FIXED
+	bool "Fixed username/password"
+	---help---
+		Verify user credentials by matching to fixed username and password
+		strings
+
+config NSH_LOGIN_PLATFORM
+	bool "Platform username/password"
+	---help---
+		Call a platform-specific function to perform the verification of
+		user credentials.  In this case, the platform-specific logic must
+		provide a function with the following prototype:
+
+			int platform_user_verify(FAR const char *username, FAR const char *password);
+
+		which is prototyped an described in apps/include/nsh.h and which may
+		be included like:
+
+			#include <apps/nsh.h>
+
+		An appropriate place to implement this function might be in the
+		directory apps/platform/<board>.
+
+config NSH_LOGIN_PASSWD
+	bool "Encrypted password file"
+	depends on FSUTILS_PASSWD
+	---help---
+		Use the content of an encrypted password file to verify user
+		credentials.  This option requires that you have selected
+		CONFIG_FSUTILS_PASSWD to enable the access methods of
+		apps/fsutils/passwd.
+
+endchoice # Verification method
+
 config NSH_LOGIN_USERNAME
-	string "Login Username"
+	string "Login username"
 	default "admin"
-	depends on !FSUTILS_PASSWD
+	depends on !NSH_LOGIN_PASSWD
 	---help---
 		Login user name.  Default: "admin"
 
 config NSH_LOGIN_PASSWORD
-	string "Login Password"
+	string "Login password"
 	default "Administrator"
-	depends on !FSUTILS_PASSWD
+	depends on !NSH_LOGIN_PASSWD
 	---help---
 		Login password:  Default: "Administrator"
 
+config NSH_LOGIN_FAILDELAY
+	int "Login failure delay"
+	default 0
+	---help---
+		Login failure delay in milliseconds.  The system will pause this
+		amount of time after each failed login attempt in order to
+		discourage people from cracking the password by brute force.  The
+		value zero may be supplied to disable the delay.
+
 config NSH_LOGIN_FAILCOUNT
-	int "Login Retry Count"
+	int "Login retry count"
 	default 3
 	---help---
 		Number of login retry attempts.
