@@ -201,13 +201,19 @@ int nsh_login(FAR struct console_stdio_s *pstate)
 
           /* Verify the username and password */
 
-#ifdef CONFIG_FSUTILS_PASSWD
+#if defined(CONFIG_NSH_LOGIN_PASSWD)
           ret = passwd_verify(username, password);
           if (PASSWORD_VERIFY_MATCH(ret))
 
-#else
+#elif defined(CONFIG_NSH_LOGIN_PLATFORM)
+          ret = platform_user_verify(username, password);
+          if (PASSWORD_VERIFY_MATCH(ret))
+
+#elif defined(CONFIG_NSH_LOGIN_FIXED)
           if (strcmp(password, CONFIG_NSH_LOGIN_PASSWORD) == 0 &&
               strcmp(username, CONFIG_NSH_LOGIN_USERNAME) == 0)
+#else
+#  error No user verification method selected
 #endif
             {
               fputs(g_loginsuccess, pstate->cn_outstream);
@@ -218,6 +224,9 @@ int nsh_login(FAR struct console_stdio_s *pstate)
             {
               fputs(g_badcredentials, pstate->cn_outstream);
               fflush(pstate->cn_outstream);
+#if CONFIG_NSH_LOGIN_FAILDELAY > 0
+              usleep(CONFIG_NSH_LOGIN_FAILDELAY * 1000L);
+#endif
             }
         }
     }
